--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-Lab3\db
-Lab3\incremental_db
-Lab3\output_files
-Lab1\db
-Lab1\incremental_db
-Lab1\output_files
-Lab2\db
-Lab2\incremental_db
-Lab2\output_files
+db/
+outputfiles/
+incremental_db/
